--- a/modules/ytp-assets-common/src/less/ckan.less
+++ b/modules/ytp-assets-common/src/less/ckan.less
@@ -761,6 +761,7 @@ dd {
         border-radius: 10px;
         height: 32px;
         padding-left: 10px;
+        padding-right: 32px;
       }
       button {
         border: none;
